crates/sdk-common/src/snapshots/snapshot_test_verification_level-5.snap
---
source: crates/sdk-common/src/deserialized_responses.rs
expression: "VerificationLevel::UnverifiedIdentity"
---
"UnverifiedIdentity"
