crates/sdk-common/src/snapshots/snapshot_test_verification_states-2.snap
---
source: crates/sdk-common/src/deserialized_responses.rs
expression: "VerificationState::Unverified(VerificationLevel::VerificationViolation)"
---
{
  "Unverified": "VerificationViolation"
}
