crates/sdk-common/src/snapshots/snapshot_test_verification_states.snap
---
source: crates/sdk-common/src/deserialized_responses.rs
expression: "VerificationState::Unverified(VerificationLevel::UnsignedDevice)"
---
{
  "Unverified": "UnsignedDevice"
}
